# TFM_EDA_AGENT

./: .gitignore  README.md  pyproject.toml
benchmark/: runner.py
benchmark/datasets/: messy_retail.csv  numeric_only.csv
benchmark/questions/: tipologia_1_clean.json  tipologia_2_messy.json  tipologia_3_numeric.json
benchmark/results/: benchmark_20260406_171952.json  benchmark_agent_20260406_172721.json  benchmark_baseline_20260406_173039.json
data/samples/: sales.csv
mcp_servers/eda_tools/: ops.py  profiling.py  server.py  store.py
src/eda_agent/: agent.py  app.py  memory.py  prompts.py  schemas.py
src/eda_agent/adapters/: ollama.py
